# py_particle_analysis

./: .gitignore  .pre-commit-config.yaml  CPC_analysis.py  Conc.py  Conc_Data_csv_convert.py  DEKATI_ELPI+_fileread.py  Def.py  Dist.py  Dist_Data_csv_convert.py  Growth.py  Impactor_Design.py  PALASCPC_fileread.py  PALAS_SMPS2100_csv_convert.py  PALAS_SMPS2100_fileread.py  PALAS_UFCPC_fileread.py  PALAS_USMPS_fileread.py  ParticleElectricalMobility.py  ParticleMechanics.py  ParticlePhysics.py  Particle_analysis.py  README.md  SMPS_analysis.py  SMPS_filewrite.py  Save_values.py  Sup.py  TEM_histogram.py  TSICPC_fileread.py  TSI_APS3310_fileread.py  TSI_APS3321_fileread.py  TSI_CPC3775_fileread.py  TSI_EM3068_fileread.py  TSI_LAS3340A_fileread.py  TSI_SMPS3071_fileread.py  TSI_SMPS3938_fileread.py  TSI_SMPS_fileread.py  Usefull code snips  Usefull_code_cnips.md  calles Kernal_density  elpi_data.py  histogram_fit.py  (+5 more)
.github/workflows/: ci.yml  release.yml  zizmore.yml
ExampleFiles/: 20201103_DEKATI_ELPI+.txt  20221215_PALAS_USMPS_12520_Cal.txt  20221215_TSI_SMPS3071_Cal.txt  20230222_TSI_CPC3775_LD2.txt  20230223_TSI_CPC3775_variablelength.txt  20230516_TSI_APS3321.TXT  20240527_TSI_SMPS3938_ACTRISLevel0.txt  20240527_TSI_SMPS3938__ACTRISLevel1.txt  20240527_TSI_SMPS3938_tab_decimalpoint_row.TXT  20240610_TSI_CPC3775_CPCcomparison.txt  20240610_TSI_EM3068  20240619_TSI_SMPS3938_AerosolPraktikum.TXT  20240701_PALAS-UFCPC_13047.txt  20240717_TSI_EM3068  DataFile_Columns.xlsx
ExampleFiles/20240704_TSI_LAS3340A/: 20240704_1  20240704_10  20240704_100  20240704_101  20240704_102  20240704_103  20240704_104  20240704_105  20240704_106  20240704_107  20240704_108  20240704_109  20240704_11  20240704_110  20240704_111  20240704_112  20240704_113  20240704_114  20240704_115  20240704_116  20240704_117  20240704_118  20240704_119  20240704_12  20240704_120  20240704_121  20240704_122  20240704_123  (+116 more)
JupyterNotebooks/: Jupyter_Example.ipynb  plot_themes.ipynb
_v1/: DEKATI_ELPIplus_fileread.py  PALAS_UFCPC_fileread.py  PALAS_USMPS_fileread.py  PALAS_WELAS_fileread.py  TSI_APS3310_fileread.py  TSI_APS3321_fileread.py  TSI_CPC3775_fileread.py  TSI_EM3068_fileread.py  TSI_LAS3340A_fileread.py  TSI_SMPS_fileread.py  conc.py  conc_data_csv_convert.py  defs.py  dist.py  dist_data_csv_convert.py  particle_analysis.py  sup.py
(+204 files in other folders)
